Hands on lab finished

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
     </p>
 
     <div class="row">
+        <input type="text" id="txtEmail" class="form-control">
+    </div>
+    <div class="row">
         <div class="col">
             <input type="text" id="txtMsg" class="form-control">
         </div>
